# asset_manager

./: .dockerignore  .env.example  .gitignore  .mypy.ini  CLAUDE.md  Charts.ipynb  Dockerfile  MANIFEST.in  README.md  app.py  build_deps.sh  cloudbuild.yaml  config.ini  lambda_entrypoint.py  main.py  pyproject.toml  requirements.txt  setup.py  storage.py  yoyo.ini
.github/workflows/: ci.yaml  deploy_lambda.yaml  lambda.yaml  test.yaml
api/: index.py
asset_manager/: __init__.py  clean.py  config.py  custom_types.py  dashboard.py  datastore.py  db.py  fetch.py  lambda_entrypoint.py  models.py  repository.py  s3.py  storage.py
asset_manager/data/: config.ini
db/: schema.sql
db/migrations/: 20260123040144_create_records_table.sql  20260123040144_create_snapshots_table.sql
k8s/argocd/: applications.yaml  image-updater.yaml
k8s/base/: configmap.yaml  deployment.yaml  service.yaml
k8s/prod/: configmap-env.yaml  deployment-patch.yaml  kustomization.yaml  namespace.yaml  secret-provider-class.yaml  service-account.yaml
k8s/staging/: configmap-env.yaml  deployment-patch.yaml  kustomization.yaml  namespace.yaml  secret-provider-class.yaml  service-account.yaml  tailscale-ingress.yaml
migrations/: 0001_create_records_table.rollback.sql  0001_create_records_table.sql
scripts/: add_date_column.py  apply_migrations.py  consolidate_by_year.py  migrate_s3_to_postgres.py
src/asset_manager/: __init__.py  __main__.py  cli.py  config.py  models.py  report.py  repository.py  sheets.py
src/asset_manager/data/: config.ini
src/asset_manager/web/: __init__.py  app.py  auth.py
src/asset_manager/web/templates/: accounts.html  base.html  dashboard.html  login.html
tests/: conftest.py  test_clean.py  test_cli.py  test_fetch.py  test_report.py  test_repository.py  test_s3.py  test_sheets.py
tests/storage/: test_storage.py
